--- a/airbnb2.0/package.json
+++ b/airbnb2.0/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.12",
+    "date": "^2.0.1",
+    "date-fns": "^2.29.3",
     "next": "12.3.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
