--- a/airbnb2.0/package.json
+++ b/airbnb2.0/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@badrap/bar-of-progress": "^0.2.2",
     "@heroicons/react": "^2.0.12",
     "date": "^2.0.1",
     "date-fns": "^2.29.3",
