--- a/airbnb2.0/package.json
+++ b/airbnb2.0/package.json
@@ -13,10 +13,12 @@
     "@heroicons/react": "^2.0.12",
     "date": "^2.0.1",
     "date-fns": "^2.29.3",
+    "mapbox-gl": "^2.10.0",
     "next": "12.3.1",
     "react": "^18.2.0",
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-map-gl": "^7.0.19",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
